hugo-theme-relearn applied

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/ananke"]
 	path = themes/ananke
 	url = https://github.com/theNewDynamic/gohugo-theme-ananke.git
+[submodule "hugo-theme-relearn"]
+	path = hugo-theme-relearn
+	url = git@github.com:McShelby/hugo-theme-relearn.git
